fix(pictogram-card): 3 lines truncation and same behavior on focus

--- a/packages/web-components/src/components/card/card.scss
+++ b/packages/web-components/src/components/card/card.scss
@@ -24,34 +24,6 @@
   }
 }
 
-:host(#{$dds-prefix}-card)[pictogram-placement='bottom']:hover {
-  ::slotted(svg[slot='pictogram']) {
-    display: none;
-  }
-
-  /* stylelint-disable value-no-vendor-prefix, property-no-vendor-prefix */
-  .#{$prefix}--card__copy {
-    margin-bottom: 0;
-
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
-  }
-  /* stylelint-enable value-no-vendor-prefix, property-no-vendor-prefix */
-}
-
-:host(#{$dds-prefix}-card)[pictogram-placement='bottom']:focus {
-  ::slotted(svg[slot='pictogram']) {
-    display: none;
-  }
-
-  .#{$prefix}--card__copy {
-    display: flex;
-    margin-bottom: 0;
-  }
-}
-
 :host(#{$dds-prefix}-card) {
   outline: none;
 
@@ -82,6 +54,24 @@
   }
 
   &[pictogram-placement='bottom'] {
+    &:hover,
+    &:focus {
+      ::slotted(svg[slot='pictogram']) {
+        display: none;
+      }
+
+      /* stylelint-disable value-no-vendor-prefix, property-no-vendor-prefix */
+      .#{$prefix}--card__copy {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3;
+        overflow: hidden;
+
+        margin-bottom: 0;
+      }
+      /* stylelint-enable value-no-vendor-prefix, property-no-vendor-prefix */
+    }
+
     .#{$prefix}--card__pictogram {
       ::slotted(#{$dds-prefix}-card-heading) {
         padding-top: 0;
